# RangeShifter_batch

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Community.cpp  Community.h  Config.h.in  DispersalTrait.h  Individual.cpp  Main.cpp  Model.cpp  NeutralStatsManager.cpp  NeutralStatsManager.h  NeutralTrait.cpp  Parameters.cpp  Parameters.h  Population.cpp  Population.h  README.md  RSrandom.cpp  Species.cpp  Species.h  SubCommunity.cpp  SubCommunity.h  contributing.md
.github/workflows/: check.yml  check_charly.yml  check_gcc  check_gcc.yml
Seasonal_inputs/: CONTROL.txt  ParameterFile.xlsx  StageStructFile.xlsx
doc/Manual/: ~$ngeShifter_v2.0_UserManual.docx
doc/Manual/Batchmode/: CONTROL.txt  EmigrationFile.xlsx  GeneticsFile.xlsx  InitialisationFile.xlsx  InteractionFile.xlsx  LandFile.xlsx  ManagementFile.xlsx  ParameterFile.xlsx  SettlementFile.xlsx  StageStructFile.xlsx  TraitsFile.xlsx  TransferFile.xlsx  TranslocationFile.xlsx
enc_temp_folder/1eb7e8e3b8b6c2d557e5dcf0eeaaa791/: BatchMode.cpp
input_test/expected_output/: Batch1_Sim1_Land37_Parameters.txt  Batch1_Sim2_Land37_Occupancy.txt  Batch1_Sim2_Land37_Pop.txt  BatchLog.txt
run_on_gha/: check_output.bash
run_on_gha/expected_output/: Batch1_RS_log.csv  Batch1_Sim1_Land37_Occupancy.txt  Batch1_Sim1_Land37_Occupancy_Stats.txt  Batch1_Sim1_Land37_Parameters.txt  Batch1_Sim1_Land37_Pop.txt  Batch1_Sim1_Land37_Range.txt  Batch1_Sim2_Land37_Occupancy_Stats.txt  Batch1_Sim2_Land37_Parameters.txt  Batch1_Sim2_Land37_Range.txt  BatchLog.txt
run_on_gha/expected_output/macos/: Batch1_RS_log.csv  Batch1_Sim1_Land37_Parameters.txt  BatchLog.txt
run_on_gha/expected_output/windows_ubuntu/: Batch1_RS_log.csv  Batch1_Sim1_Land37_Parameters.txt  Batch1_Sim1_Land37_Pop.txt  Batch1_Sim1_Land37_Range.txt
run_on_gha/rs_project_charly/Inputs/: CONTROL.txt  DynLandFile_Rep1_pVal0.5_natHab0.1_consAgri0.1_covAgri0.8_distubanceSurvival0.15_distubanceFreq4.txt  EmigrationFile.txt  GeneticsFile.txt  InitialisationFile.txt  LandFile.txt  ParameterFile.txt  SettlementFile.txt  StageStructFile.txt  SurvivalStageWeights.txt  TraitsFile1.txt  TransMatrix.txt  TransferFile.txt  baseMapRep1_pVal0.5_natHab0.1_consAgri0.1_covAgri0.8_distubanceSurvival0.15_distubanceFreq4.asc  disturbanceMapRep1_pVal0.5_natHab0.1_consAgri0.1_covAgri0.8_distubanceSurvival0.15_distubanceFreq4.asc  initial_map.asc
run_on_gha/rs_project_charly/Outputs/: Batch123_RS_log.csv  Batch123_Sim10_Land1_Parameters.txt  Batch123_Sim10_Land1_Pop.txt  Batch123_Sim10_Land1_Rep0_perLocusNeutralGenetics.txt  Batch123_Sim10_Land1_neutralGenetics.txt  BatchLog.txt  DebugLog.txt
run_on_gha/rs_test_project/: check_output.bash  test_scenario.md
run_on_gha/rs_test_project/Inputs/: CONTROL.txt  EmigrationFile_ex4.txt  GeneticsFile_example.txt  InitialisationFile_ex4.txt  ParameterFile_ex4.txt  SettlementFile_ex4.txt  StageStructFile_ex4.txt  TraitsFile_example.txt  TransferFile_ex4.txt
run_on_gha/rs_test_project/Output_Maps/: anchor.txt
run_on_gha/rs_test_project/Outputs/: anchor.txt  git_anchor.txt
run_on_gha/test_scenario2/Inputs/: InitialisationFile_test2.txt  ParameterFile_test2.txt
run_on_gha/test_scenario2/Outputs/: BatchLog.txt
run_on_gha/test_scenario_01/: check_output.bash
run_on_gha/test_scenario_01/Inputs/: GeneticsFile_example.txt  ParameterFile_ex4.txt  RandomCheck.txt  TraitsFile_example.txt  TransferFile_ex4.txt
run_on_gha/test_scenario_01/Output_Maps/: git_anchor.txt
run_on_gha/test_scenario_01/Outputs/: Batch1_Sim1_Land37_Parameters.txt  BatchLog.txt  DebugLog.txt
run_on_gha/test_scenario_01/Outputs/expected/macos/: Batch1_Sim1_Land37_Parameters.txt  Batch1_Sim1_Land37_Pop.txt  Batch1_Sim1_Land37_Range.txt  Batch1_Sim1_Land37_Rep0_pairwisePatchNeutralGenetics.txt  Batch1_Sim1_Land37_Rep0_perLocusNeutralGenetics.txt  Batch1_Sim1_Land37_neutralGenetics.txt
run_on_gha/test_scenario_01/Outputs/expected/windows_ubuntu/: Batch1_Sim1_Land37_Parameters.txt  Batch1_Sim1_Land37_Pop.txt  Batch1_Sim1_Land37_Range.txt  Batch1_Sim1_Land37_Rep0_geneValues.txt
run_on_gha/test_scenario_02/Inputs/: CONTROL.txt  EmigrationFile_test2.txt  GeneticsFile_test2.txt  LandFile_test2.txt  SettlementFile_test2.txt  TransferFile_test2.txt
run_on_gha/test_scenario_02/Outputs/: Batch1_RS_log.csv  Batch1_Sim1_Land1_Parameters.txt  Batch1_Sim1_Land1_Pop.txt  Batch1_Sim1_Land1_Range.txt  DebugLog.txt  RS_log.csv
src/: BatchMode.cpp  BatchMode.h  BatchView.cpp  BatchView.h  Main.cpp  Version.cpp  Version.h
src/Batch/: Main.cpp  Makefile.txt
src/Common/: BatchMode.h  Version.h
src/Common/RScore/: Community.h  Individual.cpp  Model.h  Parameters.h  Patch.h  RSrandom.cpp  RSrandom.h  RSrandom.tmp.h  RandomCheck.h  Species.h  SubCommunity.h
src/RScore/: CMakeLists.txt  Cell.cpp  Cell.h  Community.cpp  Community.h  DispersalTrait.cpp  DispersalTrait.h  FractalGenerator.cpp  FractalGenerator.h  GeneticFitnessTrait.cpp  GeneticFitnessTrait.h  Genome.cpp  Genome.h  Individual.cpp  Individual.h  Landscape.cpp  Landscape.h  Main.cpp  Model.cpp  Model.h  NeutralStatsManager.cpp  NeutralStatsManager.h  NeutralTrait.cpp  NeutralTrait.h  Parameters.cpp  Parameters.h  Patch.cpp  Patch.h  Population.cpp  Population.h  RSrandom.cpp  RSrandom.h  RandomCheck.cpp  RandomCheck.h  Species.cpp  Species.h  SpeciesTrait.cpp  SpeciesTrait.h  SubCommunity.cpp  SubCommunity.h  (+1 more)
src/RScore/unit_tests/: testIndividual.cpp  testNeutralStats.cpp  testPopulation.cpp
unit_tests/: testIndividual.cpp  testNeutralStats.cpp  testPopulation.cpp
